--- a/lacoseiteracoes.html
+++ b/lacoseiteracoes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,47 +9,50 @@
   <link rel='stylesheet' type='text/css' media='screen' href='for.css'>
   <script src='main.js'></script>
 </head>
+
 <body>
   <form name="selectForm">
-    <p>
-      <label for="tipoMusica"
-        >Escolha alguns tipos de música, em seguida, clique no botão
-        abaixo:</label
-      >
-      <select id="tipoMusica" name="tipoMusica" multiple="multiple">
-        <option selected="selected">R&B</option>
-        <option>Jazz</option>
-        <option>Blues</option>
-        <option>New Age</option>
-        <option>Classico</option>
-        <option>Ópera</option>
-        <option>MPB</option>
-        <opition>POP</opition>
-        <option>Pagode</option>
-      </select>
-    </p>
+    <div class="flex-container">
+      <div class="flex-item-1">
+        <label for="tipoMusica">Escolha alguns tipos de música, em seguida, clique no botão abaixo:</label><br><br>
+      </div>
+      <div class="flex-item-2">
+        <select id="tipoMusica" name="tipoMusica" multiple="multiple">
+          <option selected="selected">R&B</option>
+          <option>Jazz</option>
+          <option>Blues</option>
+          <option>New Age</option>
+          <option>Classico</option>
+          <option>Ópera</option>
+          <option>MPB</option>
+          <opition>POP</opition>
+          <option>Pagode</option>
+        </select>
+      </div>
+    </div>
     <p><input id="btn" type="button" value="Quantos foram selecionados?" /></p>
   </form>
-  
-   <body>
-  <script>
-    function howMany(selectObject) {
-      var numeroSelecionadas = 0;
-      for (var i = 0; i < selectObject.options.length; i++) {
-        if (selectObject.options[i].selected) {
-          numeroSelecionadas++;
+
+  <body>
+    <script>
+      function howMany(selectObject) {
+        var numeroSelecionadas = 0;
+        for (var i = 0; i < selectObject.options.length; i++) {
+          if (selectObject.options[i].selected) {
+            numeroSelecionadas++;
+          }
         }
+        return numeroSelecionadas;
       }
-      return numeroSelecionadas;
-    }
-   
-    var btn = document.getElementById("btn");
-    btn.addEventListener("click", function () {
-      alert(
-        "Total de opções selecionadas: " +
+
+      var btn = document.getElementById("btn");
+      btn.addEventListener("click", function () {
+        alert(
+          "Total de opções selecionadas: " +
           howMany(document.selectForm.tipoMusica),
-      );
-    });
-  </script>
-</body>
+        );
+      });
+    </script>
+  </body>
+
 </html>
